--- a/musicplayerweb/package.json
+++ b/musicplayerweb/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "styled-components": "^5.3.9",
+    "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
