--- a/musicplayerweb/package.json
+++ b/musicplayerweb/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "styled-components": "^5.3.9",
