--- a/musicplayerweb/.gitignore
+++ b/musicplayerweb/.gitignore
@@ -12,6 +12,18 @@
 /build
 
 # misc
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
 .env.local
 .env.development.local
@@ -21,3 +33,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vercel
+.env.development
