--- a/musicplayerweb/package.json
+++ b/musicplayerweb/package.json
@@ -18,6 +18,7 @@
     "Babel": "^0.0.1",
     "classnames": "^2.3.2",
     "cx": "^23.4.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-saver": "^2.0.5",
     "keen-slider": "^6.8.5",
     "react": "^18.2.0",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
+    "@babel/node": "^7.20.7",
     "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
