--- a/musicplayerweb/public/manifest.json
+++ b/musicplayerweb/public/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": ".",
+  "start_url": "",
   "scope": "",
   "display": "standalone",
   "theme_color": "#000000",
